# larql

./: .gitignore  Cargo.toml  README.md
crates/larql-cli/: Cargo.toml
crates/larql-cli/src/: bfs_cmd.rs  main.rs
crates/larql-cli/src/commands/extraction/: extract_index_cmd.rs
crates/larql-compute/: README.md
crates/larql-core/examples/: bench_graph.rs
crates/larql-core/src/: lib.rs
crates/larql-core/src/algo/: components.rs  filter.rs  merge.rs  mod.rs  shortest_path.rs  walk.rs
crates/larql-core/src/core/: edge.rs  graph.rs
crates/larql-core/src/engine/: bfs.rs  chain.rs
crates/larql-core/src/io/: checkpoint.rs  format.rs  mod.rs
crates/larql-core/tests/: test_bfs_mock.rs  test_chain.rs  test_graph.rs
crates/larql-inference/: README.md
crates/larql-inference/examples/: bench_walk_inference.rs  profile_overhead.rs
crates/larql-inference/src/: attention.rs  clustering.rs  forward.rs  graph_ffn.rs  lib.rs  vector_index.rs
crates/larql-inference/src/ffn/: mod.rs  (+1 more)
crates/larql-inference/tests/: test_modules.rs
crates/larql-lql/src/: executor.rs  lib.rs  relations.rs
crates/larql-python/: Cargo.toml  pyproject.toml
crates/larql-python/src/: lib.rs
crates/larql-vindex/: README.md
crates/larql-vindex/examples/: bench_scaling.rs  build_down_features.rs
crates/larql-vindex/tests/: test_vindex.rs
docs/: ADVANCED_EXPERIMENTAL_PATTERNS.md  BUDDY_ADAPTATION_GUIDE.md  BUDDY_COMPLETE_INTEGRATION.md  BUDDY_SOURCE2_MASTER_DESIGN.md  EXTRACTABLE_ORGANS.md  LARQL_DONOR_LIMITS_AND_GRAFT_RULES.md  ffn-graph-layer.md
docs/ffn/: README.md  walk.md
(+9 files in other folders)
