[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "chuk-larql-native"
version = "0.1.0"
description = "Rust-accelerated LARQL knowledge graph engine"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Chris Hay", email = "chrishayuk@googlemail.com" },
]
keywords = ["knowledge-graph", "llm", "interpretability"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "_larql_core"
